# cellmap-segmentation-challenge

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  EVALUATION.md  FAQ.md  README.md  annotation_classes.html  available_data.html  cellmap-schemas.html  cellmap_segmentation_challenge.benchmark.html  cellmap_segmentation_challenge.cli.datasplit.html  cellmap_segmentation_challenge.cli.evaluate.html  cellmap_segmentation_challenge.cli.fetch_data.html  cellmap_segmentation_challenge.cli.html  cellmap_segmentation_challenge.cli.predict.html  cellmap_segmentation_challenge.cli.process.html  cellmap_segmentation_challenge.cli.speedtest.html  cellmap_segmentation_challenge.cli.train.html  cellmap_segmentation_challenge.cli.visualize.html  cellmap_segmentation_challenge.config.html  cellmap_segmentation_challenge.dataloader.html  cellmap_segmentation_challenge.datasplit.html  cellmap_segmentation_challenge.evaluate.html  cellmap_segmentation_challenge.fetch_data.html  cellmap_segmentation_challenge.html  cellmap_segmentation_challenge.loss.html  cellmap_segmentation_challenge.models.html  cellmap_segmentation_challenge.models.model_load.html  cellmap_segmentation_challenge.models.resnet.html  cellmap_segmentation_challenge.models.unet_model_2D.html  cellmap_segmentation_challenge.models.unet_model_3D.html  cellmap_segmentation_challenge.models.vitnet.html  cellmap_segmentation_challenge.postprocess.html  cellmap_segmentation_challenge.predict.html  cellmap_segmentation_challenge.process.html  cellmap_segmentation_challenge.train.html  cellmap_segmentation_challenge.utils.crops.html  cellmap_segmentation_challenge.utils.dataloader.html  cellmap_segmentation_challenge.utils.datasplit.html  (+30 more)
.github/workflows/: build.yaml  docs.yml  tests.yml
_modules/: index.html
_modules/cellmap_segmentation_challenge/: dataloader.html  datasplit.html  evaluate.html  fetch_data.html  loss.html  postprocess.html  predict.html  process.html  train.html  visualize.html
_modules/cellmap_segmentation_challenge/models/: model_load.html  resnet.html  unet_model_2D.html  unet_model_3D.html  vitnet.html
_modules/cellmap_segmentation_challenge/utils/: batch_eval.html  crops.html  dataloader.html  datasplit.html  loss.html  (+8 more)
_sources/: annotation_classes.rst  cellmap_segmentation_challenge.cli.datasplit.rst  cellmap_segmentation_challenge.cli.evaluate.rst  cellmap_segmentation_challenge.cli.fetch_data.rst  cellmap_segmentation_challenge.cli.predict.rst  cellmap_segmentation_challenge.cli.process.rst  cellmap_segmentation_challenge.cli.rst  cellmap_segmentation_challenge.cli.speedtest.rst  cellmap_segmentation_challenge.cli.train.rst  cellmap_segmentation_challenge.cli.visualize.rst  cellmap_segmentation_challenge.config.rst  cellmap_segmentation_challenge.datasplit.rst  cellmap_segmentation_challenge.evaluate.rst  cellmap_segmentation_challenge.fetch_data.rst  cellmap_segmentation_challenge.models.model_load.rst  cellmap_segmentation_challenge.models.rst  cellmap_segmentation_challenge.models.unet_model_3D.rst  cellmap_segmentation_challenge.postprocess.rst  cellmap_segmentation_challenge.predict.rst  cellmap_segmentation_challenge.process.rst  cellmap_segmentation_challenge.rst  cellmap_segmentation_challenge.train.rst  cellmap_segmentation_challenge.utils.crops.rst  cellmap_segmentation_challenge.utils.dataloader.rst  cellmap_segmentation_challenge.utils.datasplit.rst  cellmap_segmentation_challenge.utils.eval_utils.rst  cellmap_segmentation_challenge.utils.fetch_data.rst  cellmap_segmentation_challenge.utils.loss.rst  cellmap_segmentation_challenge.utils.pipeline.rst  cellmap_segmentation_challenge.utils.rst  cellmap_segmentation_challenge.utils.security.rst  cellmap_segmentation_challenge.utils.visualize.rst  cellmap_segmentation_challenge.visualize.rst  dataloader.rst  evaluation_resampling.rst  index.rst  submission_data_format.rst
_static/: SegmentationChallengeWithNeuroglancerURLs_20241211_all_s3.csv  SegmentationChallengeWithNeuroglancerURLs_20241211_s3.csv  classes.csv
benchmark/: __init__.py  evaluate.py  pipeline.py
data/: README.md
docs/: build_docs.sh  cellmap_segmentation_challenge.train.rst  cellmap_segmentation_challenge.visualize.rst
docs/source/: annotation_classes.rst  available_data.rst  cellmap-schemas.rst  cellmap_segmentation_challenge.benchmark.rst  cellmap_segmentation_challenge.dataloader.rst  cellmap_segmentation_challenge.datasplit.rst  cellmap_segmentation_challenge.loss.rst  cellmap_segmentation_challenge.models.resnet.rst  cellmap_segmentation_challenge.models.rst  cellmap_segmentation_challenge.models.unet_model_2D.rst  cellmap_segmentation_challenge.models.vitnet.rst  cellmap_segmentation_challenge.rst  conf.py  dataloader.rst  evaluation.rst  evaluation_resampling.rst  index.rst  load_model_weights.rst  modules.rst  submission_data_format.rst  training.rst  visualization.rst
examples/: README.md  postprocess.py  predict_2D.py  predict_3D.py  process_2D.py  process_3D.py  train_2D.py  train_3D.py
models/: resnet.py  resnet3D.py  resnext3D.py  unet_model.py  unet_model_2D.py  unet_parts.py  unet_parts_3D.py  vnet.py
scheme_docs/: development.html  index.html
scheme_docs/api/: annotation.html
scheme_docs/cellmap-conventions/: s3-overview.html
src/cellmap-segmentation-challenge/: __about__.py
src/cellmap_segmentation_challenge/: __init__.py  _process.py  config.py  dataloader.py  datasplit.py  download_data.py  evaluate.py  fetch_data.py  postprocess.py  predict.py  process.py  train.py  visualize.py
tests/: conftest.py  process_config.py  test.py  test_all.py  test_crop_manifest.csv  test_crops.py  test_evaluate_metrics.py  test_evaluate_refactored.py  test_iou_matrix.py  test_loss.py  test_match_instance.py  test_matched_crop.py  test_predict_filtering.py  test_process_config.py  test_security.py  test_simulate.py  test_train.py  test_utils.py  train_config.py
tests/internal_use/: evaluate_dev.py  mock_submission.py  pipeline.py  tune_threads.py
utils/: __init__.py  blockwise.py  dataloader.py  evaluate.py  loss.py  model_load.py  visualize.py
(+84 files in other folders)
