[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellmap-segmentation-challenge"
dynamic = ["version"]
description = "Repository of scripts to facilitate participation in CellMap's segmentation challenge. This includes downloading data, simple setups for training 2D and 3D models, workflows for prediction and post-processing on out-of-memory arrays, and evaluation of results against validation data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["machine learning", "deep learning", "segmentation", "cellmap"]
authors = [
  { name = "Jeff Rhoades", email = "rhoadesj@janelia.hhmi.org" },
  { name = "Emma Avetissian", email = "avetissiane@janelia.hhmi.org" },
  { name = "Davis Vann Bennett", email = "davis.v.bennett@gmail.com" },
  { name = "Marwan Zouinkhi", email = "zouinkhim@hhmi.org" },
  { name = "Mark Kittisopikul", email = "kittisopikulm@janelia.hhmi.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "tensorboard",
  "tensorboardX",
  "cellmap-schemas==0.8.0",
  "click>=8, <9",
  "cellmap-data@git+https://github.com/janelia-cellmap/cellmap-data",
  "tqdm",
  "zarr < 3.0.0",
  "xarray-ome-ngff >= 3.1.1, <=4.0.0",
  "structlog",
  "yarl",
  "toolz",
  "ml-collections",
  "scipy",
  "numpy",
  "python-dotenv",
  "universal-pathlib",
  "neuroglancer",
  "scikit-learn",
  "scikit-image",
  "xarray-tensorstore>=0.1.5,<0.2",
  "tensorstore>=0.1.65,<0.2",
  "torch",
  ]

[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov", "mypy", "black"]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx_mdinclude",
]

dev = [
    "ipython",
    "jupyter",
    "rich",
    "ruff",
    "snakeviz",
    "twine",
    "hatch",
    "pdbpp",
    "python-semantic-release",
    "cellmap-segmentation-challenge[test,docs]",
    "gunpowder",
    "matplotlib",
    "isort",
]

[project.urls]
Documentation = "https://github.com/janelia-cellmap/cellmap-segmentation-challenge#readme"
Issues = "https://github.com/janelia-cellmap/cellmap-segmentation-challenge/issues"
Source = "https://github.com/janelia-cellmap/cellmap-segmentation-challenge"

[tool.hatch.metadata]
allow-direct-references=true

[tool.hatch.version]
path = "src/cellmap_segmentation_challenge/__about__.py"

[tool.hatch.envs.default]
installer = "pip"
python = "3.11"

[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cellmap_segmentation_challenge tests}"

[tool.coverage.run]
source_pkgs = ["cellmap_segmentation_challenge", "tests"]
branch = true
parallel = true
omit = [
  "src/cellmap_segmentation_challenge/__about__.py",
]

[tool.coverage.paths]
cellmap_segmentation_challenge = ["src/cellmap_segmentation_challenge", "*/cellmap-segmentation-challenge/src/cellmap_segmentation_challenge"]
tests = ["tests", "*/cellmap-segmentation-challenge/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
csc = "cellmap_segmentation_challenge.cli:run"

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
cellmap-segmentation-challenge = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "test", "docs"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.11"
numba = "*"
torchvision = ">=0.20.1,<0.21"
pytorch = ">=2.5.1,<3"
numpy = "*"
tensorboard = ">=2.18.0,<3"
tensorboardx = ">=2.6.2.2,<3"
click = ">=8.1.7,<9"
tqdm = ">=4.67.0,<5"
yarl = "*"
toolz = "*"
ml-collections = "*"
scipy = "*"
python-dotenv = "*"
scikit-learn = ">=1.5.2,<2"
scikit-image = ">=0.24.0,<0.25"
aiohttp = ">=3.11.6,<4"
dask = ">=2024.11.2,<2025"
s3fs = ">=2024.10.0,<2025"
rich = "*"
pygments = "*"
pyasn1 = "*"
zarr = ">=2.18.3,<3"
pydantic = ">=2.9.2,<3"
atomicwrites = ">=1.4.1,<2"
cachetools = ">=5.5.0,<6"
cycler = ">=0.12.1,<0.13"
flexcache = ">=0.3,<0.4"
flexparser = ">=0.4,<0.5"
google-apitools = ">=0.5.32,<0.6"
google-auth = ">=2.36.0,<3"
httplib2 = ">=0.22.0,<0.23"
kiwisolver = ">=1.4.7,<2"
natsort = ">=8.4.0,<9"
oauth2client = ">=4.1.3,<5"
pint = ">=0.24.4,<0.25"
platformdirs = ">=4.3.6,<5"
roifile = ">=2024.5.24,<2025"
rsa = ">=4.9,<5"
structlog = ">=24.4.0,<25"
matplotlib = ">=3.9.2,<4"
fastremap = ">=1.14.0,<2"

[tool.pixi.target.linux-64.dependencies]
tensorstore = "=0.1.65,<0.2"
xarray-tensorstore = ">=0.1.5,<0.2"

[tool.pixi.target.osx-64.dependencies]
tensorstore = "=0.1.65,<0.2"
xarray-tensorstore = ">=0.1.5,<0.2"

[tool.pixi.target.osx-arm64.dependencies]
tensorstore = "=0.1.65,<0.2"
xarray-tensorstore = ">=0.1.5,<0.2"

[tool.pixi.feature.dev.dependencies]
gunpowder = "*"
